update the images and link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="hidden picAnimation col d-flex justify-content-center">
                 <div class="frame">
-                    <img src="profilePic.webp" class="pic">
+                    <img src="./images/profilePic.webp" class="pic">
                 </div>
             </div>
 
@@ -81,7 +81,7 @@
                     </div>
                     <div class="p-2"><b>Powai, Mumbai, Maharashtra</b></div>
                 </div>
-                <a href="Radhey_Resume.pdf" download>
+                <a href="./documents/Radhey_Resume.pdf" download>
                     <button class="downCv rounded-pill px-3 py-2 mt-5">
                         <b>Download CV</b>
                     </button>
@@ -141,10 +141,10 @@
             <h1 class="cardT">
                 <span class="vl"></span> &nbsp; PROJECT
             </h1>
-            <a href="OnlineTest.html">
+            <a href="./OnlineTest/OnlineTest.html">
                 <div class="hov">
                     <button class="but">Live Demo</button>
-                    <img class="pro" src="project.png" alt="project">
+                    <img class="pro" src="./images/project.png" alt="project">
                 </div>
             </a>
             <!-- <p class="mt-5 px-5 fs-5 fw-semibold">
@@ -177,7 +177,7 @@
                                 <div class="card miniCard">
                                     <div class="card-body">
                                         <p class="circle">
-                                            <img src="ear.png" style="height: 70px; width: 70px; margin-top: 10px;">
+                                            <img src="./images/ear.png" style="height: 70px; width: 70px; margin-top: 10px;">
                                         </p>
                                         <h3 class="card-title pb-5">Good Listener</h3>
                                     </div>
@@ -187,7 +187,7 @@
                                 <div class="card miniCard">
                                     <div class="card-body">
                                         <p class="circle">
-                                            <img src="learner.png" style="height: 70px; width: 70px; margin-top: 10px;">
+                                            <img src="./images/learner.png" style="height: 70px; width: 70px; margin-top: 10px;">
                                         </p>
                                         <h3 class="card-title pb-5">Quick Learner</h3>
                                     </div>
@@ -197,7 +197,7 @@
                                 <div class="card miniCard">
                                     <div class="card-body">
                                         <p class="circle">
-                                            <img src="teamwork.png"
+                                            <img src="./images/teamwork.png"
                                                 style="height: 70px; width: 70px; margin-top: 10px;">
                                         </p>
                                         <h3 class="card-title pb-5">Teamwork Skills</h3>
@@ -208,7 +208,7 @@
                                 <div class="card miniCard">
                                     <div class="card-body">
                                         <p class="circle">
-                                            <img src="sincere.png" style="height: 70px; width: 70px; margin-top: 10px;">
+                                            <img src="./images/sincere.png" style="height: 70px; width: 70px; margin-top: 10px;">
                                         </p>
                                         <h3 class="card-title pb-5">Sincere in Work</h3>
                                     </div>
@@ -237,7 +237,7 @@
 
             <div class="d-flex hidden ed">
                 <div class="card mt-5 shadow-lg car">
-                    <img src="HFHS.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
+                    <img src="./images/HFHS.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
                     <div class="card-body">
                         <h5 class="card-title">Holy Family High School</h5>
                         <p class="card-text">Mar 2015</p>
@@ -254,7 +254,7 @@
 
             <div class="d-flex hidden ed">
                 <div class="card mt-5 shadow-lg car">
-                    <img src="tolani.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
+                    <img src="./images/tolani.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
                     <div class="card-body">
                         <h5 class="card-title">Tolani College of Commerce</h5>
                         <p class="card-text">Feb 2017</p>
@@ -271,7 +271,7 @@
 
             <div class="d-flex hidden ed">
                 <div class="card mt-5 shadow-lg car">
-                    <img src="tolani.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
+                    <img src="./images/tolani.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
                     <div class="card-body">
                         <h5 class="card-title">Tolani College of Commerce</h5>
                         <p class="card-text">Oct 2020</p>
@@ -303,19 +303,19 @@
 
                     <div class="col-lg-4 mb-4 text-center">
                         <p class="circle bg-white text-center hidden hob">
-                            <img src="gaming.png" style="height: 70px; width: 70px; margin-top: 10px;">
+                            <img src="./images/gaming.png" style="height: 70px; width: 70px; margin-top: 10px;">
                         </p>
                         <h3 class="card-title pb-5">Gaming</h3>
                     </div>
                     <div class="col-lg-4 mb-4 text-center">
                         <p class="circle bg-white text-center hidden hob">
-                            <img src="book.png" style="height: 70px; width: 70px; margin-top: 10px;">
+                            <img src="./images/book.png" style="height: 70px; width: 70px; margin-top: 10px;">
                         </p>
                         <h3 class="card-title pb-5">Reading</h3>
                     </div>
                     <div class="col-lg-4 mb-4 text-center">
                         <p class="circle bg-white text-center hidden hob">
-                            <img src="surfing.png" style="height: 70px; width: 70px; margin-top: 10px;">
+                            <img src="./images/surfing.png" style="height: 70px; width: 70px; margin-top: 10px;">
                         </p>
                         <h3 class="card-title pb-5">Net Surfing</h3>
                     </div>
