some updates and img add in form

--- a/index.html
+++ b/index.html
@@ -143,18 +143,19 @@
             </h1>
             <a href="./OnlineTest/OnlineTest.html">
                 <div class="hov">
-                    <button class="but">Live Demo</button>
                     <img class="pro" src="./images/project.png" alt="project">
+                    <button class="but">Live Demo</button>
                 </div>
             </a>
-            <!-- <p class="mt-5 px-5 fs-5 fw-semibold">
-            I have experience in developing an online test interface using HTML, CSS, and
-            JavaScript. In one of my projects, I designed a web page that simulates an online test environment.
-            This project demonstrates my proficiency in front-end web development and my ability to create
-            interactive and user-friendly interfaces. It showcases my skills in HTML, CSS, and JavaScript, and
-            the use of external libraries for styling and functionality.
-        </p> -->
+        </div>
 
+        <div class="container p-1 py-5">
+            <a href="./Form/index.html">
+                <div class="hov">
+                    <img class="pro" src="./images/form.png" alt="project">
+                    <button class="but">Live Demo</button>
+                </div>
+            </a>
         </div>
     </section>
 
@@ -177,7 +178,8 @@
                                 <div class="card miniCard">
                                     <div class="card-body">
                                         <p class="circle">
-                                            <img src="./images/ear.png" style="height: 70px; width: 70px; margin-top: 10px;">
+                                            <img src="./images/ear.png"
+                                                style="height: 70px; width: 70px; margin-top: 10px;">
                                         </p>
                                         <h3 class="card-title pb-5">Good Listener</h3>
                                     </div>
@@ -187,7 +189,8 @@
                                 <div class="card miniCard">
                                     <div class="card-body">
                                         <p class="circle">
-                                            <img src="./images/learner.png" style="height: 70px; width: 70px; margin-top: 10px;">
+                                            <img src="./images/learner.png"
+                                                style="height: 70px; width: 70px; margin-top: 10px;">
                                         </p>
                                         <h3 class="card-title pb-5">Quick Learner</h3>
                                     </div>
@@ -208,7 +211,8 @@
                                 <div class="card miniCard">
                                     <div class="card-body">
                                         <p class="circle">
-                                            <img src="./images/sincere.png" style="height: 70px; width: 70px; margin-top: 10px;">
+                                            <img src="./images/sincere.png"
+                                                style="height: 70px; width: 70px; margin-top: 10px;">
                                         </p>
                                         <h3 class="card-title pb-5">Sincere in Work</h3>
                                     </div>
