major changes done

--- a/index.html
+++ b/index.html
@@ -234,60 +234,72 @@
                 <h1><span class="vl"></span> &nbsp; TIMELINE</h1>
             </div>
 
-            <div>
-                <h2 class="mt-5">Education
-                </h2>
-            </div>
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div>
+                        <h2 class="mt-5">Education</h2>
+                    </div>
 
-            <div class="d-flex hidden ed">
-                <div class="card mt-5 shadow-lg car">
-                    <img src="./images/HFHS.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
-                    <div class="card-body">
-                        <h5 class="card-title">Holy Family High School</h5>
-                        <p class="card-text">Mar 2015</p>
-                        <p class="card-text pt-0">X<sup>th</sup></p>
+                    <div class="d-flex hidden ed">
+                        <div class="card mt-5 shadow-lg car me-auto">
+                            <img src="./images/tolani.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
+                            <div class="card-body">
+                                <h5 class="card-title">Tolani College of Commerce</h5>
+                                <p class="card-text">Oct 2020</p>
+                                <p class="card-text pt-0">B.Com</p>
+                            </div>
+                        </div>
+                        <hr class="hl">
+                        <span class="vl2"></span>
+                    </div>
+
+                    <div class="d-flex hidden ed">
+                        <div class="card mt-5 shadow-lg car me-auto">
+                            <img src="./images/tolani.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
+                            <div class="card-body">
+                                <h5 class="card-title">Tolani College of Commerce</h5>
+                                <p class="card-text">Feb 2017</p>
+                                <p class="card-text pt-0">XII<sup>th</sup></p>
+                            </div>
+                        </div>
+                        <hr class="hl">
+                        <span class="vl2"></span>
+                    </div>
+
+                    <div class="d-flex hidden ed">
+                        <div class="card mt-5 shadow-lg car me-auto">
+                            <img src="./images/HFHS.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
+                            <div class="card-body">
+                                <h5 class="card-title">Holy Family High School</h5>
+                                <p class="card-text">Mar 2015</p>
+                                <p class="card-text pt-0">X<sup>th</sup></p>
+                            </div>
+                        </div>
+                        <hr class="hl">
+                        <span class="vl2" style="height: 9.6rem;"></span>
                     </div>
                 </div>
-                <i class="fa-solid fa-circle-notch fa-rotate-90 fa-2xl circ d-none d-sm-block"
-                    style="color: #0dcaf0;"></i>
-                <i class="fa-solid fa-circle-notch fa-rotate-90 fa-lg circ d-block d-sm-none"
-                    style="color: #0dcaf0;"></i>
-                <hr class="hl">
-                <span class="vl2"></span>
-            </div>
 
-            <div class="d-flex hidden ed">
-                <div class="card mt-5 shadow-lg car">
-                    <img src="./images/tolani.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
-                    <div class="card-body">
-                        <h5 class="card-title">Tolani College of Commerce</h5>
-                        <p class="card-text">Feb 2017</p>
-                        <p class="card-text pt-0">XII<sup>th</sup></p>
+                <div class="col-12 col-lg-6">
+                    <div class="text-end">
+                        <h2 class="mt-5">Experience</h2>
+                    </div>
+
+                    <div class="d-flex hidden ed">
+                        <span class="vl3" style="height: 9.6rem;"></span>
+                        <hr class="hl2">
+                        <div class="card mt-5 shadow-lg car ms-auto">
+                            <img src="./images/logo.webp" class="card-img-top" style="height: 128px; object-fit:contain;" alt="SkillUp IT">
+                            <div class="card-body">
+                                <h5 class="card-title">SkillUp IT Academy</h5>
+                                <p class="card-text">Aug 2022</p>
+                                <p class="card-text pt-0">Web Developer</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <i class="fa-solid fa-circle-notch fa-rotate-90 fa-2xl circ d-none d-sm-block"
-                    style="color: #0dcaf0;"></i>
-                <i class="fa-solid fa-circle-notch fa-rotate-90 fa-lg circ d-block d-sm-none"
-                    style="color: #0dcaf0;"></i>
-                <hr class="hl">
-                <span class="vl2"></span>
-            </div>
 
-            <div class="d-flex hidden ed">
-                <div class="card mt-5 shadow-lg car">
-                    <img src="./images/tolani.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
-                    <div class="card-body">
-                        <h5 class="card-title">Tolani College of Commerce</h5>
-                        <p class="card-text">Oct 2020</p>
-                        <p class="card-text pt-0">B.Com</p>
-                    </div>
-                </div>
-                <i class="fa-solid fa-circle-notch fa-rotate-90 fa-2xl circ d-none d-sm-block"
-                    style="color: #0dcaf0;"></i>
-                <i class="fa-solid fa-circle-notch fa-rotate-90 fa-lg circ d-block d-sm-none"
-                    style="color: #0dcaf0;"></i>
-                <hr class="hl">
-                <span class="vl2" style="height: 9.6rem;"></span>
+
             </div>
 
         </div>
