--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <br><br>
 
     <!-- Project -->
-    <section class="content" id="project">
+    <!-- <section class="content" id="project">
         <div class="container p-1 py-5">
             <h1 class="cardT">
                 <span class="vl"></span> &nbsp; PROJECT
@@ -156,6 +156,47 @@
                     <button class="but">Live Demo</button>
                 </div>
             </a>
+        </div>
+    </section> -->
+
+    <section class="content" id="project">
+        <div class="container p-1 py-5">
+
+            <h1 class="cardT">
+                <span class="vl"></span> &nbsp; PROJECT
+            </h1>
+
+            <div id="carousel" class="carousel my-3 slide" data-bs-ride="carousel">
+
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active btn1"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" class="btn2"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" class="btn3"
+                        aria-label="Slide 3"></button>
+                </div>
+
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <a href="./OnlineTest/OnlineTest.html" target="_blank">
+                            <img src="./images/project.png" class=" w-100" alt="Online Test">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="./Form/index.html" target="_blank">
+                            <img src="./images/form.png" class=" w-100" alt="SkillUp Form">
+                        </a>
+                    </div>
+                    <div class="carousel-item">
+                        <a href="https://radheyambre.github.io/DinerM4-Sushi-Cafe/" target="_blank">
+                            <img src="./images/DinerM4.png" class=" w-100" alt="DinerM4">
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </section>
 
@@ -289,7 +330,8 @@
                         <span class="vl3" style="height: 9.6rem;"></span>
                         <hr class="hl2">
                         <div class="card mt-5 shadow-lg car ms-auto">
-                            <img src="./images/logo.webp" class="card-img-top" style="height: 128px; object-fit:contain;" alt="SkillUp IT">
+                            <img src="./images/logo.webp" class="card-img-top"
+                                style="height: 128px; object-fit:contain;" alt="SkillUp IT">
                             <div class="card-body">
                                 <h5 class="card-title">SkillUp IT Academy</h5>
                                 <p class="card-text">Aug 2022</p>
