--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </div>
                 </div>
 
-                <div class="carousel-indicators border border-danger">
+                <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active btn1"
                         aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" class="btn2"
