--- a/index.html
+++ b/index.html
@@ -314,8 +314,22 @@
                                 style="height: 128px; object-fit:contain;" alt="SkillUp IT">
                             <div class="card-body">
                                 <h5 class="card-title">SkillUp IT Academy</h5>
-                                <p class="card-text">Aug 2022</p>
-                                <p class="card-text pt-0">Web Developer</p>
+                                <p class="card-text">Mar 2023 - Apr 2024</p>
+                                <p class="card-text pt-0">Frontend Developer</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex hidden ed">
+                        <span class="vl3" style="height: 9.6rem;"></span>
+                        <hr class="hl2">
+                        <div class="card mt-5 shadow-lg car ms-auto">
+                            <img src="./images/logo.webp" class="card-img-top"
+                                style="height: 128px; object-fit:contain;" alt="SkillUp IT">
+                            <div class="card-body">
+                                <h5 class="card-title">Reachlocal</h5>
+                                <p class="card-text">May 2023 - Present</p>
+                                <p class="card-text pt-0">Website Support Analyst</p>
                             </div>
                         </div>
                     </div>
