--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
                     <div class="d-flex hidden ed">
                         <div class="card mt-5 shadow-lg car me-auto">
-                            <img src="./images/tolani.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
+                            <img src="./images/tolani.jpg" class="card-img-top" style="height: 128px;" alt="Tolani Colleage of Commerce">
                             <div class="card-body">
                                 <h5 class="card-title">Tolani College of Commerce</h5>
                                 <p class="card-text">Oct 2020</p>
@@ -276,7 +276,7 @@
 
                     <div class="d-flex hidden ed">
                         <div class="card mt-5 shadow-lg car me-auto">
-                            <img src="./images/tolani.jpg" class="card-img-top" style="height: 128px;" alt="HFHS">
+                            <img src="./images/tolani.jpg" class="card-img-top" style="height: 128px;" alt="Tolani Colleage of Commerce">
                             <div class="card-body">
                                 <h5 class="card-title">Tolani College of Commerce</h5>
                                 <p class="card-text">Feb 2017</p>
@@ -307,7 +307,7 @@
                     </div>
 
                     <div class="d-flex hidden ed">
-                        <span class="vl3" style="height: 9.6rem;"></span>
+                        <span class="vl3" style="height: 12rem;"></span>
                         <hr class="hl2">
                         <div class="card mt-5 shadow-lg car ms-auto">
                             <img src="./images/logo.webp" class="card-img-top"
@@ -324,7 +324,7 @@
                         <span class="vl3" style="height: 9.6rem;"></span>
                         <hr class="hl2">
                         <div class="card mt-5 shadow-lg car ms-auto">
-                            <img src="./images/logo.webp" class="card-img-top"
+                            <img src="./images/Reachlocal.jpg" class="card-img-top"
                                 style="height: 128px; object-fit:contain;" alt="SkillUp IT">
                             <div class="card-body">
                                 <h5 class="card-title">Reachlocal</h5>
