--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                         <i class="fa-solid fa-location-dot fa-2xl pt-3" style="color: #0dcaf0;"></i>
                         <p class="ps-3 fw-bold">Powai, Mumbai, Maharashtra</p>
                     </div>
-                    <a class="my-3" href="/documents/Radhey_Ambre_Resume.pdf" download>
+                    <a class="my-3" href="./documents/Radhey_Ambre_Resume.pdf" download>
                         <button class="downCv rounded-pill px-3 py-2 mt-5">
                             <b>Download CV</b>
                         </button>
