minor changes on education and descriptin!

--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
 
             <div class="hidden selfAnimation col">
                 <h1>Radhey Ambre</h1>
-                <h2>Looking for opportunites as an <b>Web Developer</b></h2>
-                <div class="my-3">Seeking the position to utilize my skills and abilities in the Computer and
-                    Information Technology industry that offers professional growth while being resourceful,
-                    innovative
-                    and flexible.</div>
+                <span>A dedicated and detail-oriented</span>
+                <h4 class="mb-0">Website Support Associate at Genpact,</h4>
+                <div class="mb-3">specializing in providing technical and functional support for web-based platforms. With a strong customer-first mindset, 
+                    they handle queries, troubleshoot website issues, ensure seamless user experiences, and collaborate with internal teams to resolve content, UI, and 
+                    performance-related challenges. Proficient in analyzing user concerns, tracking bugs, and offering effective solutions while maintaining 
+                    high service standards. Their role bridges the gap between end users and technical teams, making them a key contributor 
+                    to digital success at Genpact.</div>
                 <div class="d-flex my-3">
                     <div class="p-2"><i class="fa-solid fa-location-crosshairs fa-2xl" style="color: #0dcaf0;"></i>
                     </div>
@@ -321,15 +323,29 @@
                     </div>
 
                     <div class="d-flex hidden ed">
-                        <span class="vl3" style="height: 9.6rem;"></span>
+                        <span class="vl3" style="height: 19.2rem;"></span>
                         <hr class="hl2">
                         <div class="card mt-5 shadow-lg car ms-auto">
                             <img src="./images/Reachlocal.jpg" class="card-img-top"
                                 style="height: 128px; object-fit:contain;" alt="SkillUp IT">
                             <div class="card-body">
                                 <h5 class="card-title">Reachlocal</h5>
-                                <p class="card-text">May 2023 - Present</p>
+                                <p class="card-text">May 2023 - April 2024</p>
                                 <p class="card-text pt-0">Website Support Analyst</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex hidden ed">
+                        <span class="vl3" style="height: 9.6rem;"></span>
+                        <hr class="hl2">
+                        <div class="card mt-5 shadow-lg car ms-auto">
+                            <img src="./images/Genpact-logo.png" class="card-img-top"
+                                style="height: 128px; object-fit:contain;" alt="SkillUp IT">
+                            <div class="card-body">
+                                <h5 class="card-title">Genpact</h5>
+                                <p class="card-text">April 2024 - Present</p>
+                                <p class="card-text pt-0">Website Support Associate</p>
                             </div>
                         </div>
                     </div>
