--- a/index.html
+++ b/index.html
@@ -71,14 +71,13 @@
 
             <div class="hidden selfAnimation col">
                 <h1>Radhey Ambre</h1>
-                <span>A dedicated and detail-oriented</span>
-                <h4 class="mb-0">Website Support Associate at Genpact,</h4>
-                <div class="mb-3">specializing in providing technical and functional support for web-based platforms. With a strong customer-first mindset, 
+                <h4 class="mb-0">Website Associate at Genpact,</h4>
+                <div class="mb-3">A dedicated and detail-oriented <strong>Website Associate</strong> specializing in providing technical and functional support for web-based platforms. With a strong customer-first mindset, 
                     they handle queries, troubleshoot website issues, ensure seamless user experiences, and collaborate with internal teams to resolve content, UI, and 
                     performance-related challenges. Proficient in analyzing user concerns, tracking bugs, and offering effective solutions while maintaining 
                     high service standards. Their role bridges the gap between end users and technical teams, making them a key contributor 
                     to digital success at Genpact.</div>
-                <div class="d-flex my-3">
+                <div class="d-flex my-3">l̥
                     <div class="p-2"><i class="fa-solid fa-location-crosshairs fa-2xl" style="color: #0dcaf0;"></i>
                     </div>
                     <div class="p-2"><b>Powai, Mumbai, Maharashtra</b></div>
