--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     performance-related challenges. Proficient in analyzing user concerns, tracking bugs, and offering effective solutions while maintaining 
                     high service standards. Their role bridges the gap between end users and technical teams, making them a key contributor 
                     to digital success at Genpact.</div>
-                <div class="d-flex my-3">l̥
+                <div class="d-flex my-3">
                     <div class="p-2"><i class="fa-solid fa-location-crosshairs fa-2xl" style="color: #0dcaf0;"></i>
                     </div>
                     <div class="p-2"><b>Powai, Mumbai, Maharashtra</b></div>
